test/JDBC/sql_expected/BABEL-3268.out
-- setup --
CREATE FUNCTION dbo.babel_3268_fn_1 () RETURNS int AS BEGIN RETURN 10 END
GO
CREATE FUNCTION dbo.babel_3268_fn_2 (@param INT) RETURNS int AS BEGIN RETURN @param * @param END
GO
CREATE FUNCTION dbo.babel_3268_fn_3 () RETURNS NVARCHAR AS BEGIN RETURN 'testing babel_3268' END
GO





CREATE TABLE babel_3268_t1 (a INT, b INT)
INSERT INTO babel_3268_t1 (a) VALUES (1)
CREATE TABLE babel_3268_t3 (a INT, b INT)
INSERT INTO babel_3268_t3 (a) VALUES (3)
CREATE TABLE babel_3268_t5 (a INT, b INT)
INSERT INTO babel_3268_t5 (a) VALUES (4)
CREATE TABLE babel_3268_t7 (a INT, b INT, c NVARCHAR)
INSERT INTO babel_3268_t7 (a) VALUES (1)
CREATE TABLE babel_3268_t8 (a INT, b INT, c NVARCHAR)
INSERT INTO babel_3268_t8 (a) VALUES (1)
GO
~~ROW COUNT: 1~~

~~ROW COUNT: 1~~

~~ROW COUNT: 1~~

~~ROW COUNT: 1~~

~~ROW COUNT: 1~~


-- Begin Test cases --
-- Create table with Default
CREATE TABLE babel_3268_t2 (a int, b int DEFAULT dbo.babel_3268_fn_1())
INSERT INTO babel_3268_t2 (a) VALUES (1)
SELECT * FROM babel_3268_t2
GO
~~ROW COUNT: 1~~

~~START~~
int#!#int
1#!#10
~~END~~

--Alter table add default --
ALTER TABLE babel_3268_t1 ADD DEFAULT dbo.babel_3268_fn_1() FOR b
SELECT * FROM babel_3268_t1 --Verifies old rows are NOT updated with default
INSERT INTO babel_3268_t1(a,b) VALUES (2,3) --Verfies data is show instead of default if present
INSERT INTO babel_3268_t1(a) VALUES (4) --Verfies default is used if column is otherwise null
SELECT * from babel_3268_t1
GO
~~START~~
int#!#int
1#!#<NULL>
~~END~~

~~ROW COUNT: 1~~

~~ROW COUNT: 1~~

~~START~~
int#!#int
1#!#<NULL>
2#!#3
4#!#10
~~END~~


--Alter table full TSQL Syntax
ALTER TABLE babel_3268_t3 ADD CONSTRAINT babel_3268_fn_1_constraint DEFAULT dbo.babel_3268_fn_1() FOR a;
SELECT * FROM babel_3268_t3
INSERT INTO babel_3268_t3(a,b) VALUES (2,3)
INSERT INTO babel_3268_t3(a) VALUES (4)
SELECT * from babel_3268_t3
GO
~~START~~
int#!#int
3#!#<NULL>
~~END~~

~~ROW COUNT: 1~~

~~ROW COUNT: 1~~

~~START~~
int#!#int
3#!#<NULL>
2#!#3
4#!#<NULL>
~~END~~

--Create table default function uses parameters
CREATE TABLE babel_3268_t4 (a INT DEFAULT dbo.babel_3268_fn_2(-2), b int)
INSERT INTO babel_3268_t4 (b) VALUES (1)
SELECT * FROM babel_3268_t4
GO
~~ROW COUNT: 1~~

~~START~~
int#!#int
4#!#1
~~END~~


--ALTER table default function uses parameters
ALTER TABLE babel_3268_t5 ADD DEFAULT dbo.babel_3268_fn_2(100) FOR b
SELECT * FROM babel_3268_t5
INSERT INTO babel_3268_t5(a,b) VALUES (2,3)
INSERT INTO babel_3268_t5(a) VALUES (4)
SELECT * FROM babel_3268_t5
GO
~~START~~
int#!#int
4#!#<NULL>
~~END~~

~~ROW COUNT: 1~~

~~ROW COUNT: 1~~

~~START~~
int#!#int
4#!#<NULL>
2#!#3
4#!#10000
~~END~~


--CREATE table multiple defaults will fail because of an unrelated bug BABEL-3524
CREATE TABLE babel_3268_t6 (a INT ADD DEFAULT dbo.babel_3268_fn_1(), b INT DEFAULT dbo.babel_3268_fn_1(), c TEXT )
INSERT INTO babel_3268_t6 (c) VALUES ('testing babel_3268')
SELECT * FROM babel_3268_t6
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near 'ADD' at line 2 and character position 34)~~


--ALTER table multiple defaults will fail because of an unrelated bug BABEL-3524
ALTER TABLE babel_3268_t7 ADD CONSTRAINT babel_3268_fn_2_constraint DEFAULT dbo.babel_3268_fn_2(90) FOR b, CONSTRAINT babel_3268_fn_3_constraint DEFAULT dbo.babel_3268_fn_3() FOR c;
ALTER TABLE babel_3268_t8 ADD DEFAULT dbo.babel_3268_fn_2(90) FOR b, DEFAULT dbo.babel_3268_fn_3() FOR c;
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error at or near "CONSTRAINT")~~



--CLEAN UP--
DROP TABLE babel_3268_t1
DROP TABLE babel_3268_t2
DROP TABLE babel_3268_t3
DROP TABLE babel_3268_t4
DROP TABLE babel_3268_t5
--DROP TABLE babel_3268_t6
DROP TABLE babel_3268_t7
DROP TABLE babel_3268_t8
DROP FUNCTION dbo.babel_3268_fn_1
DROP FUNCTION dbo.babel_3268_fn_2
DROP FUNCTION dbo.babel_3268_fn_3
GO
